package com.yyf.app.ch6;

/**
 * 对象接口
 * 可以动态的添加职责
 * @author YYF.
 * date 2023/3/8 22:58.
 */
public abstract class Component {

    public abstract void operation();
}
